--- a/index.html
+++ b/index.html
@@ -138,16 +138,10 @@
 					</div>
 					<div class="carousel-inner">
 						<div class="carousel-item active">
-							<img
-								src="//images-pw.pixieset.com/sample_photos/theme_8_c5c72c66_XL.jpg"
-								alt="..."
-							/>
+							<img src="./images/herosection.jpg" alt="..." />
 						</div>
 						<div class="carousel-item">
-							<img
-								src="//images-pw.pixieset.com/sample_photos/theme_8_41dce162_XL.jpg"
-								alt="..."
-							/>
+							<img src="./images/herosection1.jpg" alt="..." />
 						</div>
 					</div>
 					<button
@@ -199,13 +193,13 @@
 				<div class="row">
 					<div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
 						<img
-							src="//images-pw.pixieset.com/elementfield/767036941/montreal_21-c318e372.jpg"
+							src="./images/1.jpg"
 							class="w-100 shadow-1-strong rounded mb-4"
 							alt="Boat on Calm Water"
 						/>
 
 						<img
-							src="//images-pw.pixieset.com/elementfield/767036941/montreal_6-9844eb47.jpg"
+							src="./images/2.jpg"
 							class="w-100 shadow-1-strong rounded mb-4"
 							alt="Wintry Mountain Landscape"
 						/>
@@ -213,25 +207,25 @@
 
 					<div class="col-lg-4 mb-4 mb-lg-0">
 						<img
-							src="//images-pw.pixieset.com/elementfield/767036941/montreal_4-6fa32eaa.jpg"
+							src="./images/3.jpg"
 							class="w-100 shadow-1-strong rounded mb-4"
 							alt="Boat on Calm Water"
 						/>
 						<img
-							src="//images-pw.pixieset.com/elementfield/767036941/montreal_5-3981ad57.jpg"
+							src="./images/4.jpg"
 							class="w-100 shadow-1-strong rounded mb-4"
 						/>
 					</div>
 
 					<div class="col-lg-4 mb-4 mb-lg-0">
 						<img
-							src="//images-pw.pixieset.com/elementfield/767036941/montreal_21-c318e372.jpg"
+							src="./images/1.jpg"
 							class="w-100 shadow-1-strong rounded mb-4"
 							alt="Waves at Sea"
 						/>
 
 						<img
-							src="//images-pw.pixieset.com/elementfield/767036941/montreal_4-6fa32eaa.jpg"
+							src="./images/3.jpg"
 							class="w-100 shadow-1-strong rounded mb-4"
 							alt="Yosemite National Park"
 						/>
@@ -249,28 +243,16 @@
 				</div>
 				<div class="owl-carousel owl-theme">
 					<div class="item" style="width: 850px">
-						<img
-							src="//images-pw.pixieset.com/elementfield/767036941/montreal_5-3981ad57.jpg"
-							alt=""
-						/>
+						<img src="./images/4.jpg" alt="" />
 					</div>
 					<div class="item" style="width: 350px">
-						<img
-							src="//images-pw.pixieset.com/elementfield/767036941/montreal_6-9844eb47.jpg"
-							alt=""
-						/>
+						<img src="./images/2.jpg" alt="" />
 					</div>
 					<div class="item" style="width: 850px">
-						<img
-							src="//images-pw.pixieset.com/elementfield/767036941/montreal_21-c318e372.jpg"
-							alt=""
-						/>
+						<img src="./images/1.jpg" alt="" />
 					</div>
 					<div class="item" style="width: 350px">
-						<img
-							src="//images-pw.pixieset.com/elementfield/767036941/montreal_4-6fa32eaa.jpg"
-							alt=""
-						/>
+						<img src="./images/3.jpg" alt="" />
 					</div>
 				</div>
 				<button class="custom-prev">
@@ -370,9 +352,7 @@
 									</p>
 								</div>
 								<div class="right">
-									<img
-										src="//images-pw.pixieset.com/sample_photos/theme_8_f81ae7f6_XS.jpg"
-									/>
+									<img src="./images/5.jpg" />
 								</div>
 							</div>
 						</div>
@@ -393,9 +373,7 @@
 									</p>
 								</div>
 								<div class="right">
-									<img
-										src="//images-pw.pixieset.com/elementfield/542136941/montreal_28-c70c5252.jpg"
-									/>
+									<img src="./images/6.jpg" />
 								</div>
 							</div>
 						</div>
@@ -413,9 +391,7 @@
 									</p>
 								</div>
 								<div class="right">
-									<img
-										src="//images-pw.pixieset.com/sample_photos/theme_8_f067cc0d_XS.jpg"
-									/>
+									<img src="./images/7.jpg" />
 								</div>
 							</div>
 						</div>
