--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 							data-bs-target="#navbarSupportedContent"
 						></i>
 
-						<div class="d-flex">
+						<div class="d-flex" id="d-flex">
 							<div class="collapse navbar-collapse" id="navbarSupportedContent">
 								<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 									<li class="nav-item">
@@ -227,36 +227,33 @@
 					</p>
 				</div>
 				<div class="row">
-					<div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
+					<div class="col-lg-4 col-md-4 mb-lg-0">
 						<img
 							src="./images/1.jpg"
-							class="w-100 shadow-1-strong rounded mb-4"
+							class="w-100 shadow-1-strong rounded"
 							alt="Boat on Calm Water"
 						/>
 
 						<img
 							src="./images/2.jpg"
-							class="w-100 shadow-1-strong rounded mb-4"
+							class="w-100 shadow-1-strong rounded"
 							alt="Wintry Mountain Landscape"
 						/>
 					</div>
 
-					<div class="col-lg-4 mb-4 mb-lg-0">
+					<div class="col-lg-4 col-md-4 mb-lg-0">
 						<img
 							src="./images/3.jpg"
-							class="w-100 shadow-1-strong rounded mb-4"
+							class="w-100 shadow-1-strong rounded"
 							alt="Boat on Calm Water"
 						/>
-						<img
-							src="./images/4.jpg"
-							class="w-100 shadow-1-strong rounded mb-4"
-						/>
+						<img src="./images/4.jpg" class="w-100 shadow-1-strong rounded" />
 					</div>
 
-					<div class="col-lg-4 mb-4 mb-lg-0">
+					<div class="col-lg-4 col-md-4 mb-lg-0">
 						<img
 							src="./images/1.jpg"
-							class="w-100 shadow-1-strong rounded mb-4"
+							class="w-100 shadow-1-strong rounded"
 							alt="Waves at Sea"
 						/>
 
