--- a/index.html
+++ b/index.html
@@ -275,16 +275,16 @@
 					</p>
 				</div>
 				<div class="owl-carousel owl-theme">
-					<div class="item" style="width: 850px">
+					<div class="item item1">
 						<img src="./images/4.jpg" alt="" />
 					</div>
-					<div class="item" style="width: 350px">
+					<div class="item item2">
 						<img src="./images/2.jpg" alt="" />
 					</div>
-					<div class="item" style="width: 850px">
+					<div class="item item1">
 						<img src="./images/1.jpg" alt="" />
 					</div>
-					<div class="item" style="width: 350px">
+					<div class="item item2">
 						<img src="./images/3.jpg" alt="" />
 					</div>
 				</div>
