--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
 													class="dropdown-item"
 													data-bs-toggle="collapse"
 													data-bs-target="#navbarSupportedContent"
-													href="#"
-													>Action</a
+													href="#grid"
+													>GALLERY</a
 												>
 											</li>
 											<li>
@@ -94,8 +94,8 @@
 													class="dropdown-item"
 													data-bs-toggle="collapse"
 													data-bs-target="#navbarSupportedContent"
-													href="#"
-													>Another action</a
+													href="#slider"
+													>SLIDER</a
 												>
 											</li>
 										</ul>
@@ -217,7 +217,7 @@
 					<i class="fa-solid fa-arrow-right"></i>
 				</button>
 			</div>
-			<div class="grid">
+			<div class="grid" id="grid">
 				<div class="galleryHeading">
 					<h1>Gallery,</h1>
 
@@ -265,7 +265,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="slider">
+			<div class="slider" id="slider">
 				<div class="sliderHeading">
 					<h2>Pacific Northwest to destinations beyond,</h2>
 					<p>
