--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 								<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 									<li class="nav-item">
 										<a
-											class="nav-link active"
+											class="nav-link active hide"
 											aria-current="page"
 											aria-expanded="fasle"
 											href="#HeroSection"
@@ -70,31 +70,34 @@
 									</li>
 									<li class="nav-item dropdown">
 										<a
-											class="nav-link dropdown-toggle active"
+											id="port"
+											class="dropdown-toggle active"
 											href="#"
 											role="button"
 											data-bs-toggle="dropdown"
-											aria-expanded="false"
 										>
 											PORTFOLIO
 										</a>
 										<ul class="dropdown-menu">
 											<li>
-												<a class="dropdown-item" href="#grid">GALLERY</a>
+												<a class="dropdown-item hide" href="#grid">GALLERY</a>
 											</li>
 											<li>
-												<a class="dropdown-item" href="#slider">SLIDER</a>
+												<a class="dropdown-item hide" href="#slider">SLIDER</a>
 											</li>
 										</ul>
 									</li>
 									<li class="nav-item">
-										<a class="nav-link active" aria-current="page" href="#about"
+										<a
+											class="nav-link active hide"
+											aria-current="page"
+											href="#about"
 											>ABOUT</a
 										>
 									</li>
 									<li class="nav-item">
 										<a
-											class="nav-link active"
+											class="nav-link active hide"
 											aria-current="page"
 											href="#testimonials"
 											>TESTIMONIALS</a
@@ -102,7 +105,7 @@
 									</li>
 									<li class="nav-item">
 										<a
-											class="nav-link active"
+											class="nav-link active hide"
 											aria-current="page"
 											href="#contact"
 											>CONTACT</a
@@ -500,25 +503,7 @@
 				}
 
 				// Add click event listeners to the navigation links
-				$('.nav-link[href="#HeroSection"]').on("click", function () {
-					collapseNavbar();
-				});
-
-				$('.nav-link[href="#testimonials"]').on("click", function () {
-					collapseNavbar();
-				});
-				$('.dropdown-item[href="#grid"]').on("click", function () {
-					collapseNavbar();
-				});
-				$('.dropdown-item[href="#slider"]').on("click", function () {
-					collapseNavbar();
-				});
-
-				$('.nav-link[href="#contact"]').on("click", function () {
-					collapseNavbar();
-				});
-
-				$('.nav-link[href="#about"]').on("click", function () {
+				$(".hide").on("click", function () {
 					collapseNavbar();
 				});
 			});
